# toolsx

./: .gitignore  AGENTS.md  README.md  pyproject.toml  requirements.txt
.github/workflows/: publish.yml
John Wick Rises/: .download-archive.txt
src/: netis.py  subtitle_extractor.py  tg_uploader.py  ytm_dl.py
src/toolsx/: __init__.py  __main__.py  cli.py  registry.py
