[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "tools_extra"
version = "0.1.0"
description = "CLI toolbox with YouTube Music downloading and Telegram uploading tools."
readme = "README.md"
requires-python = ">=3.11"
license = "MIT"
authors = [{ name = "Zaid" }]
dependencies = [
  "kurigram~=2.2.19",
  "mutagen~=1.47.0",
  "requests~=2.33.0",
  "rich~=14.3.3",
  "yt-dlp[default]~=2026.3.17",
  "ytmusicapi~=1.11.5",
]

[project.urls]
Homepage = "https://github.com/zaid/toolsx"
Repository = "https://github.com/zaid/toolsx"

[project.scripts]
toolsx = "toolsx.cli:main"
ytm-dl = "ytm_dl:main"
tg-uploader = "tg_uploader:sync_main"

[tool.setuptools]
package-dir = { "" = "src" }
py-modules = ["ytm_dl", "tg_uploader"]

[tool.setuptools.packages.find]
where = ["src"]
include = ["toolsx*"]
